# FileTracker

./: CONTRIBUTING.md  README.md  config.yaml  example.config.yaml  pyproject.toml
data/scans/: scan_2026-04-15T05-43-28.json
data/testing/: 1.docx  3.md  test.txt
file_tracker/: __init__.py  cli.py  config.py  detector.py  hasher.py  logger.py  runner.py  scanner.py  state.py
